crates/ty_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_Inconsistent_decorat…_-_`@final`_(f8e529ec23a61665).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: overloads.md - Overloads - Invalid - Inconsistent decorators - `@final`
mdtest path: crates/ty_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import final, overload
 2 | 
 3 | class Foo:
 4 |     @overload
 5 |     def method1(self, x: int) -> int: ...
 6 |     @overload
 7 |     def method1(self, x: str) -> str: ...
 8 |     @final
 9 |     def method1(self, x: int | str) -> int | str:
10 |         return x
11 | 
12 |     @overload
13 |     @final
14 |     # error: [invalid-overload]
15 |     def method2(self, x: int) -> int: ...
16 |     @overload
17 |     def method2(self, x: str) -> str: ...
18 |     def method2(self, x: int | str) -> int | str:
19 |         return x
20 | 
21 |     @overload
22 |     def method3(self, x: int) -> int: ...
23 |     @overload
24 |     @final
25 |     # error: [invalid-overload]
26 |     def method3(self, x: str) -> str: ...
27 |     def method3(self, x: int | str) -> int | str:
28 |         return x
```

## mdtest_snippet.pyi

```
 1 | from typing_extensions import final, overload
 2 | 
 3 | class Foo:
 4 |     @overload
 5 |     @final
 6 |     def method1(self, x: int) -> int: ...
 7 |     @overload
 8 |     def method1(self, x: str) -> str: ...
 9 |     @overload
10 |     def method2(self, x: int) -> int: ...
11 |     @final
12 |     @overload
13 |     # error: [invalid-overload]
14 |     def method2(self, x: str) -> str: ...
15 |     @overload
16 |     def method3(self, x: int) -> int: ...
17 |     @final
18 |     @overload
19 |     def method3(self, x: str) -> int: ...  # error: [invalid-overload]
20 |     @overload
21 |     @final
22 |     def method3(self, x: bytes) -> bytes: ...  # error: [invalid-overload]
23 |     @overload
24 |     def method3(self, x: bytearray) -> bytearray: ...
```

# Diagnostics

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/mdtest_snippet.py:12:5
   |
12 |     @overload
   |     ---------
13 |     @final
   |     ------
14 |     # error: [invalid-overload]
15 |     def method2(self, x: int) -> int: ...
   |         ^^^^^^^
16 |     @overload
17 |     def method2(self, x: str) -> str: ...
18 |     def method2(self, x: int | str) -> int | str:
   |         ------- Implementation defined here
   |

```

```
error[invalid-overload]: `@final` decorator should be applied only to the overload implementation
  --> src/mdtest_snippet.py:23:5
   |
23 |     @overload
   |     ---------
24 |     @final
   |     ------
25 |     # error: [invalid-overload]
26 |     def method3(self, x: str) -> str: ...
   |         ^^^^^^^
27 |     def method3(self, x: int | str) -> int | str:
   |         ------- Implementation defined here
   |

```

```
error[invalid-overload]: `@final` decorator should be applied only to the first overload
  --> src/mdtest_snippet.pyi:9:5
   |
 9 | /     @overload
10 | |     def method2(self, x: int) -> int: ...
   | |_________________________________________- First overload defined here
11 |       @final
   |       ------
12 |       @overload
13 |       # error: [invalid-overload]
14 |       def method2(self, x: str) -> str: ...
   |           ^^^^^^^
   |

```

```
error[invalid-overload]: `@final` decorator should be applied only to the first overload
  --> src/mdtest_snippet.pyi:15:5
   |
15 | /     @overload
16 | |     def method3(self, x: int) -> int: ...
   | |_________________________________________- First overload defined here
17 |       @final
   |       ------
18 |       @overload
19 |       def method3(self, x: str) -> int: ...  # error: [invalid-overload]
   |           ^^^^^^^
   |

```

```
error[invalid-overload]: `@final` decorator should be applied only to the first overload
  --> src/mdtest_snippet.pyi:15:5
   |
15 | /     @overload
16 | |     def method3(self, x: int) -> int: ...
   | |_________________________________________- First overload defined here
17 |       @final
18 |       @overload
19 |       def method3(self, x: str) -> int: ...  # error: [invalid-overload]
20 |       @overload
21 |       @final
   |       ------
22 |       def method3(self, x: bytes) -> bytes: ...  # error: [invalid-overload]
   |           ^^^^^^^
   |

```
