crates/ty_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_Overload_without_an_…_-_Regular_modules_(5c8e81664d1c7470).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: overloads.md - Overloads - Invalid - Overload without an implementation - Regular modules
mdtest path: crates/ty_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | # error: [invalid-overload] "Overloads for function `func` must be followed by a non-`@overload`-decorated implementation function"
 5 | def func(x: int) -> int: ...
 6 | @overload
 7 | def func(x: str) -> str: ...
 8 | 
 9 | class Foo:
10 |     @overload
11 |     # error: [invalid-overload] "Overloads for function `method` must be followed by a non-`@overload`-decorated implementation function"
12 |     def method(self, x: int) -> int: ...
13 |     @overload
14 |     def method(self, x: str) -> str: ...
```

# Diagnostics

```
error[invalid-overload]: Overloads for function `func` must be followed by a non-`@overload`-decorated implementation function
 --> src/mdtest_snippet.py:5:5
  |
5 | def func(x: int) -> int: ...
  |     ^^^^
  |
info: Attempting to call `func` will raise `TypeError` at runtime
info: Overloaded functions without implementations are only permitted:
info:  - in stub files
info:  - in `if TYPE_CHECKING` blocks
info:  - as methods on protocol classes
info:  - or as `@abstractmethod`-decorated methods on abstract classes
info: See https://docs.python.org/3/library/typing.html#typing.overload for more details

```

```
error[invalid-overload]: Overloads for function `method` must be followed by a non-`@overload`-decorated implementation function
  --> src/mdtest_snippet.py:12:9
   |
12 |     def method(self, x: int) -> int: ...
   |         ^^^^^^
   |
info: Attempting to call `method` will raise `TypeError` at runtime
info: Overloaded functions without implementations are only permitted:
info:  - in stub files
info:  - in `if TYPE_CHECKING` blocks
info:  - as methods on protocol classes
info:  - or as `@abstractmethod`-decorated methods on abstract classes
info: See https://docs.python.org/3/library/typing.html#typing.overload for more details

```
